@@ -2,6 +2,8 @@
 CHANGES
 =======
 
+- added --user/--db-user argument to support user authentication
+
 - changed toggle key for enabling/disabling stats from F1 to F3, because the
   Terminator terminal the F1 key is reserved for "help"
 
